[package]
name = "apex-ast"
version = "0.1.0"
authors = ["Ryan Faulhaber <faulhaberryan@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
serde = { version = "1.0.101", features = ["derive"] }
# serde_json = "1.0.41"

[dev-dependencies]
pretty_assertions = "0.6.1"