[package]
name = "apex-ast"
version = "0.1.0"
authors = ["Ryan Faulhaber <faulhaberryan@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
serde = { version = "1.0.101", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
criterion = "0.3.0"

[[bench]]
name = "parse"
harness = false
path = "src/benches/parse.rs"